--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "9d412a8d",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "4                  1                 39   549                  96.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "df87d15c",
    "metadata": {},
    "outputs": [
@@ -201,8 +201,8 @@
      "data": {
       "text/plain": [
        "count    30297.000000\n",
-       "mean       153.357032\n",
-       "std        108.895698\n",
+       "mean       153.357025\n",
+       "std        108.895699\n",
        "min         10.000000\n",
        "25%         80.000000\n",
        "50%        125.000000\n",
@@ -211,20 +211,20 @@
        "Name: Price, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "airbnb_df['Price'] = pd.to_numeric(airbnb_df['Price'], downcast='integer', errors='coerce')\n",
+    "airbnb_df['Price'] = pd.to_numeric(airbnb_df['Price'], downcast='float', errors='coerce')\n",
     "# have to cast this from object to float otherwise describe doesn't show proper stats\n",
     "airbnb_df['Price'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "a9c52131",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "np.int64(181)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "eac263aa",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "47caab32",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
        "[30297 rows x 13 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,12 +605,175 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e99cd98",
+   "metadata": {},
+   "source": [
+    "### 1.2. \n",
+    "Categorical variable: For the Minnesota police use of for data, `./data/mn_police_use_of_force.csv`, clean the `subject_injury` variable, handling the NA's; this gives a value `Yes` when a person was injured by police, and `No` when no injury occurred. What proportion of the values are missing? Is this a concern? Cross-tabulate your cleaned `subject_injury` variable with the `force_type` variable. Are there any patterns regarding when the data are missing? "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8c247c31",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>response_datetime</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>is_911_call</th>\n",
+       "      <th>primary_offense</th>\n",
+       "      <th>subject_injury</th>\n",
+       "      <th>force_type</th>\n",
+       "      <th>force_type_action</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>type_resistance</th>\n",
+       "      <th>precinct</th>\n",
+       "      <th>neighborhood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016/01/01 00:47:36</td>\n",
+       "      <td>Assault in Progress</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>DASLT1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bodily Force</td>\n",
+       "      <td>Body Weight to Pin</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Tensed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Downtown East</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016/01/01 02:19:34</td>\n",
+       "      <td>Fight</td>\n",
+       "      <td>No</td>\n",
+       "      <td>DISCON</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemical Irritant</td>\n",
+       "      <td>Personal Mace</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>Verbal Non-Compliance</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Downtown West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016/01/01 02:19:34</td>\n",
+       "      <td>Fight</td>\n",
+       "      <td>No</td>\n",
+       "      <td>DISCON</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemical Irritant</td>\n",
+       "      <td>Personal Mace</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Verbal Non-Compliance</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Downtown West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016/01/01 02:28:48</td>\n",
+       "      <td>Fight</td>\n",
+       "      <td>No</td>\n",
+       "      <td>PRIORI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemical Irritant</td>\n",
+       "      <td>Crowd Control Mace</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Commission of Crime</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Downtown West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016/01/01 02:28:48</td>\n",
+       "      <td>Fight</td>\n",
+       "      <td>No</td>\n",
+       "      <td>PRIORI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemical Irritant</td>\n",
+       "      <td>Crowd Control Mace</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Commission of Crime</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Downtown West</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     response_datetime               problem is_911_call primary_offense  \\\n",
+       "0  2016/01/01 00:47:36  Assault in Progress          Yes          DASLT1   \n",
+       "1  2016/01/01 02:19:34                Fight           No          DISCON   \n",
+       "2  2016/01/01 02:19:34                Fight           No          DISCON   \n",
+       "3  2016/01/01 02:28:48                Fight           No          PRIORI   \n",
+       "4  2016/01/01 02:28:48                Fight           No          PRIORI   \n",
+       "\n",
+       "  subject_injury         force_type   force_type_action   race     sex   age  \\\n",
+       "0            NaN       Bodily Force  Body Weight to Pin  Black    Male  20.0   \n",
+       "1            NaN  Chemical Irritant       Personal Mace  Black  Female  27.0   \n",
+       "2            NaN  Chemical Irritant       Personal Mace  White  Female  23.0   \n",
+       "3            NaN  Chemical Irritant  Crowd Control Mace  Black    Male  20.0   \n",
+       "4            NaN  Chemical Irritant  Crowd Control Mace  Black    Male  20.0   \n",
+       "\n",
+       "         type_resistance  precinct   neighborhood  \n",
+       "0                 Tensed         1  Downtown East  \n",
+       "1  Verbal Non-Compliance         1  Downtown West  \n",
+       "2  Verbal Non-Compliance         1  Downtown West  \n",
+       "3    Commission of Crime         1  Downtown West  \n",
+       "4    Commission of Crime         1  Downtown West  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "police_file_path = './data/mn_police_use_of_force.csv'\n",
+    "police_df = pd.read_csv(police_file_path)\n",
+    "\n",
+    "police_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
