--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2900,11 +2900,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "b7d51880",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Provoked' 'Unprovoked' 'Questionable' 'unprovoked' ' Provoked'\n",
+      " 'Watercraft' 'Sea Disaster' nan '?' 'Unconfirmed' 'Unverified' 'Invalid'\n",
+      " 'Under investigation' 'Boat']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shark_sex['Type'].unique()[:30]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c0c61d3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Provoked' 'Unprovoked' 'Unknown']\n"
+     ]
+    }
+   ],
+   "source": [
+    "shark_type = shark_sex.copy()\n",
+    "# shark_type['Type'] = shark_type['Type'].astype(str).str.strip().replace({'nan': 'Unknown', '?': np.nan}).str[0]\n",
+    "\n",
+    "# 1. strip all strings and capitalize first char\n",
+    "shark_type['Type'] = shark_type['Type'].astype(str).str.strip().str.capitalize()\n",
+    "\n",
+    "\n",
+    "# 2. set all non provoked/unprovoked types as unknown\n",
+    "valid_types = ['Provoked', 'Unprovoked']\n",
+    "shark_type['Type'] = shark_type['Type'].where(shark_type['Type'].isin(valid_types), 'Unknown')\n",
+    "print(shark_type['Type'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "905eb6e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "proportion of unprovoked attacks: 0.7441438169602325\n"
+     ]
+    }
+   ],
+   "source": [
+    "proportion_unprovoked = (shark_type['Type'] == 'Unprovoked').mean()\n",
+    "print(\"proportion of unprovoked attacks: \" + str(proportion_unprovoked))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a02a8e52",
+   "metadata": {},
+   "source": [
+    "### 2.7. Clean the `Fatal Y/N` variable so it only takes three values: Y, N, and Unknown."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "84789a6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['N' 'Y' 'F' 'M' nan 'n' 'Nq' 'UNKNOWN' 2017 'Y x 2' ' N']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shark_sex['Fatal Y/N'].unique()[:30]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a7a3fb68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['N' 'Y' 'Unknown']\n"
+     ]
+    }
+   ],
+   "source": [
+    "shark_fatal = shark_type.copy()\n",
+    "\n",
+    "# 1. strip and uppercase strings\n",
+    "shark_fatal['Fatal Y/N'] = shark_fatal['Fatal Y/N'].astype(str).str.strip().str.capitalize()\n",
+    "\n",
+    "# 2. set all non y/n vars as unknown\n",
+    "valid_types = ['Y', 'N']\n",
+    "shark_fatal['Fatal Y/N'] = shark_fatal['Fatal Y/N'].where(shark_fatal['Fatal Y/N'].isin(valid_types), 'Unknown')\n",
+    "print(shark_fatal['Fatal Y/N'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65a159b7",
+   "metadata": {},
+   "source": [
+    "### 2.8. Are sharks more likely to launch unprovoked attacks on men or women? Is the attack more or less likely to be fatal when the attack is provoked or unprovoked? Is it more or less likely to be fatal when the victim is male or female? How do you feel about sharks?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bd2b17f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex\n",
+      "M      3343\n",
+      "F       613\n",
+      "NaN     142\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unprovoked attacks on M / F\n",
+    "unprovoked = shark_fatal[shark_fatal['Type'] == 'Unprovoked']\n",
+    "sex_counts = unprovoked['Sex'].value_counts(dropna=False)\n",
+    "print(sex_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d5bf5d0",
+   "metadata": {},
+   "source": [
+    "Sharks are more likely to launch unprovoked attacks on men."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "7f79c77f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type\n",
+      "Unprovoked    688\n",
+      "Unknown       123\n",
+      "Provoked       13\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fatal if unprovoked / provoked\n",
+    "fatal = shark_fatal[shark_fatal['Fatal Y/N'] == 'Y']\n",
+    "unprovoked_counts = fatal['Type'].value_counts(dropna=False)\n",
+    "print(unprovoked_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7c1b5b5",
+   "metadata": {},
+   "source": [
+    "Shark atacks are more fatal when unprovoked."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "3acb82e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex\n",
+      "M      659\n",
+      "F       89\n",
+      "NaN     76\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# less likely to be fatal if victim is male or female?\n",
+    "sex_fatal_counts = fatal['Sex'].value_counts(dropna=False)\n",
+    "print(sex_fatal_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9f0a5ef",
+   "metadata": {},
+   "source": [
+    "Shark attacks are more fatal to males. </br>\n",
+    "I find shark attacks to be not terribly scary as I'm not actively provoking a shark or going into ocean water where there are a lot of sharks. The data is also a bit skewed as it seems so, I'm not terribly influenced by it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c566a377",
+   "metadata": {},
+   "source": [
+    "### 2.9. What proportion of attacks appear to be by white sharks? (Hint: `str.split()` makes a vector of text values into a list of lists, split by spaces.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "25188793",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'Year', 'Type', 'Country', 'State', 'Location', 'Activity',\n",
+       "       'Name', 'Sex', 'Age', 'Injury', 'Fatal Y/N', 'Time', 'Species ',\n",
+       "       'Source'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shark_species = shark_fatal.copy()\n",
+    "shark_species.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "85f7baca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "proportion of great white attacks: 0.0005447612130016343\n"
+     ]
+    }
+   ],
+   "source": [
+    "shark_species = shark_species.rename(columns={'Species ': 'Species'})\n",
+    "shark_species['Species'] = shark_species['Species'].astype(str).str.strip().str.capitalize()\n",
+    "\n",
+    "# not doing str.split() bc it might be too slow for how much data we have\n",
+    "great_white = shark_species['Species'].str.contains('great white', na=False)\n",
+    "great_white_atk = great_white.sum()\n",
+    "proportion_gw = great_white_atk/len(shark_species)\n",
+    "print(f\"proportion of great white attacks: {proportion_gw}\")"
+   ]
   }
  ],
  "metadata": {
