fixed white shark question understanding

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "9d412a8d",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "4                  1                 39   549                  96.0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "df87d15c",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "Name: Price, dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "a9c52131",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "47caab32",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
        "[30478 rows x 13 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "8c247c31",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1194,7 @@
        "29    Male  22.0    Commission of Crime         2     Marcy Holmes  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "0a3132c5",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "eb464cff",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "9af305e3",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "799648c0",
    "metadata": {},
    "outputs": [],
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "c297ab4e",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "4ec87810",
    "metadata": {},
    "outputs": [
@@ -1636,7 +1636,7 @@
        "[5 rows x 709 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "0d6e6b41",
    "metadata": {},
    "outputs": [
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "709bd5f9",
    "metadata": {},
    "outputs": [
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "c8c7a448",
    "metadata": {},
    "outputs": [
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "0cbae145",
    "metadata": {},
    "outputs": [
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "id": "96b38934",
    "metadata": {},
    "outputs": [],
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "c7b66c65",
    "metadata": {},
    "outputs": [],
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "59426e77",
    "metadata": {},
    "outputs": [
@@ -1859,7 +1859,7 @@
        "9                                                     0    274"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "id": "a3f03830",
    "metadata": {},
    "outputs": [
@@ -2119,7 +2119,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2131,7 +2131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "id": "b8c2833f",
    "metadata": {},
    "outputs": [
@@ -2344,7 +2344,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "id": "82e4e8f7",
    "metadata": {},
    "outputs": [
@@ -2406,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "7304c2b2",
    "metadata": {},
    "outputs": [
@@ -2619,7 +2619,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2633,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "id": "49973935",
    "metadata": {},
    "outputs": [
@@ -2676,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "id": "f335ef1e",
    "metadata": {},
    "outputs": [
@@ -2701,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "c29641b9",
    "metadata": {},
    "outputs": [
@@ -2738,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "id": "a8aa5d65",
    "metadata": {},
    "outputs": [
@@ -2748,7 +2748,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2777,7 +2777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "0d3a7080",
    "metadata": {},
    "outputs": [
@@ -2795,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "id": "737f21de",
    "metadata": {},
    "outputs": [
@@ -2830,11 +2830,17 @@
        "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
-       "      <th>Injury</th>\n",
+       "      <th>...</th>\n",
        "      <th>Fatal Y/N</th>\n",
        "      <th>Time</th>\n",
        "      <th>Species</th>\n",
        "      <th>Source</th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>href formula</th>\n",
+       "      <th>href</th>\n",
+       "      <th>Case Number</th>\n",
+       "      <th>Case Number.1</th>\n",
+       "      <th>original order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2850,11 +2856,17 @@
        "      <td>Shawn Meuse</td>\n",
        "      <td>M</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Laceration to right leg below the knee</td>\n",
+       "      <td>...</td>\n",
        "      <td>N</td>\n",
        "      <td>1055 hrs</td>\n",
        "      <td>Lemon shark 1.8 m (6ft)</td>\n",
        "      <td>Johannes Marchand: Kevin McMurray Trackingshar...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2868,11 +2880,17 @@
        "      <td>Brad Ross</td>\n",
        "      <td>M</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>None sustained board severly damaged</td>\n",
+       "      <td>...</td>\n",
        "      <td>N</td>\n",
        "      <td>0730hrs</td>\n",
        "      <td>5m (16.5ft) Great White</td>\n",
        "      <td>Bob Myatt GSAF The Guardian: 9 News: ABS News:...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2886,11 +2904,17 @@
        "      <td>Not stated</td>\n",
        "      <td>M</td>\n",
        "      <td>63.0</td>\n",
-       "      <td>Severe injuries no detail</td>\n",
+       "      <td>...</td>\n",
        "      <td>N</td>\n",
        "      <td>1300hrs</td>\n",
        "      <td>Undetermined</td>\n",
        "      <td>Ralph Collier GSAF and Kevin MCMurray Tracking...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2904,11 +2928,17 @@
        "      <td>Bowie Daley</td>\n",
        "      <td>M</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>None sustained board severely damaged</td>\n",
+       "      <td>...</td>\n",
        "      <td>N</td>\n",
        "      <td>1630hrs</td>\n",
        "      <td>Suspected Great White</td>\n",
        "      <td>Bob Myatt GSAF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2922,14 +2952,21 @@
        "      <td>Eleonora Boi</td>\n",
        "      <td>F</td>\n",
        "      <td>39.0</td>\n",
-       "      <td>Bite to thigh area</td>\n",
+       "      <td>...</td>\n",
        "      <td>N</td>\n",
        "      <td>Not stated</td>\n",
        "      <td>Undetermined</td>\n",
        "      <td>Kevin McMurray Trackingsharks.com: NY Post</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2947,29 +2984,31 @@
        "3                                NSW                        Tathra Beach    \n",
        "4                           Carolina                       Carolina Beach   \n",
        "\n",
-       "       Activity          Name Sex   Age  \\\n",
-       "0       Fishing   Shawn Meuse   M   NaN   \n",
-       "1       Surfing     Brad Ross   M   NaN   \n",
-       "2  Spearfishing    Not stated   M  63.0   \n",
-       "3       Surfing   Bowie Daley   M   9.0   \n",
-       "4        Wading  Eleonora Boi   F  39.0   \n",
+       "       Activity          Name Sex   Age  ... Fatal Y/N        Time  \\\n",
+       "0       Fishing   Shawn Meuse   M   NaN  ...         N    1055 hrs   \n",
+       "1       Surfing     Brad Ross   M   NaN  ...         N     0730hrs   \n",
+       "2  Spearfishing    Not stated   M  63.0  ...         N     1300hrs   \n",
+       "3       Surfing   Bowie Daley   M   9.0  ...         N     1630hrs   \n",
+       "4        Wading  Eleonora Boi   F  39.0  ...         N  Not stated   \n",
        "\n",
-       "                                   Injury Fatal Y/N        Time  \\\n",
-       "0  Laceration to right leg below the knee         N    1055 hrs   \n",
-       "1    None sustained board severly damaged         N     0730hrs   \n",
-       "2               Severe injuries no detail         N     1300hrs   \n",
-       "3   None sustained board severely damaged         N     1630hrs   \n",
-       "4                      Bite to thigh area         N  Not stated   \n",
+       "                  Species                                              Source  \\\n",
+       "0  Lemon shark 1.8 m (6ft)  Johannes Marchand: Kevin McMurray Trackingshar...   \n",
+       "1  5m (16.5ft) Great White  Bob Myatt GSAF The Guardian: 9 News: ABS News:...   \n",
+       "2             Undetermined  Ralph Collier GSAF and Kevin MCMurray Tracking...   \n",
+       "3    Suspected Great White                                     Bob Myatt GSAF   \n",
+       "4             Undetermined         Kevin McMurray Trackingsharks.com: NY Post   \n",
        "\n",
-       "                  Species                                              Source  \n",
-       "0  Lemon shark 1.8 m (6ft)  Johannes Marchand: Kevin McMurray Trackingshar...  \n",
-       "1  5m (16.5ft) Great White  Bob Myatt GSAF The Guardian: 9 News: ABS News:...  \n",
-       "2             Undetermined  Ralph Collier GSAF and Kevin MCMurray Tracking...  \n",
-       "3    Suspected Great White                                     Bob Myatt GSAF  \n",
-       "4             Undetermined         Kevin McMurray Trackingsharks.com: NY Post  "
+       "   pdf href formula href Case Number Case Number.1 original order  \n",
+       "0  NaN          NaN  NaN         NaN           NaN            NaN  \n",
+       "1  NaN          NaN  NaN         NaN           NaN            NaN  \n",
+       "2  NaN          NaN  NaN         NaN           NaN            NaN  \n",
+       "3  NaN          NaN  NaN         NaN           NaN            NaN  \n",
+       "4  NaN          NaN  NaN         NaN           NaN            NaN  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2983,7 +3022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "id": "4a683c8d",
    "metadata": {},
    "outputs": [
@@ -3010,7 +3049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "id": "b7d51880",
    "metadata": {},
    "outputs": [
@@ -3030,7 +3069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "id": "c0c61d3b",
    "metadata": {},
    "outputs": [
@@ -3058,7 +3097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "905eb6e5",
    "metadata": {},
    "outputs": [
@@ -3085,7 +3124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "id": "84789a6f",
    "metadata": {},
    "outputs": [
@@ -3103,7 +3142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "id": "a7a3fb68",
    "metadata": {},
    "outputs": [
@@ -3137,7 +3176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "6bd2b17f",
    "metadata": {},
    "outputs": [
@@ -3170,7 +3209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "id": "7f79c77f",
    "metadata": {},
    "outputs": [
@@ -3203,7 +3242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "id": "3acb82e5",
    "metadata": {},
    "outputs": [
@@ -3244,7 +3283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "id": "25188793",
    "metadata": {},
    "outputs": [
@@ -3253,11 +3292,12 @@
       "text/plain": [
        "Index(['Date', 'Year', 'Type', 'Country', 'State', 'Location', 'Activity',\n",
        "       'Name', 'Sex', 'Age', 'Injury', 'Fatal Y/N', 'Time', 'Species ',\n",
-       "       'Source'],\n",
+       "       'Source', 'pdf', 'href formula', 'href', 'Case Number', 'Case Number.1',\n",
+       "       'original order'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3269,7 +3309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
    "id": "85f7baca",
    "metadata": {},
    "outputs": [
@@ -3277,7 +3317,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "proportion of great white attacks: 0.0005447612130016343\n"
+      "proportion of white shark attacks: 0.12874523333938623\n"
      ]
     }
    ],
@@ -3286,10 +3326,10 @@
     "shark_species['Species'] = shark_species['Species'].astype(str).str.strip().str.capitalize()\n",
     "\n",
     "# not doing str.split() bc it might be too slow for how much data we have\n",
-    "great_white = shark_species['Species'].str.contains('great white', na=False)\n",
+    "great_white = shark_species['Species'].str.contains('white', na=False, case=False)\n",
     "great_white_atk = great_white.sum()\n",
     "proportion_gw = great_white_atk/len(shark_species)\n",
-    "print(f\"proportion of great white attacks: {proportion_gw}\")"
+    "print(f\"proportion of white shark attacks: {proportion_gw}\")"
    ]
   }
  ],
